<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_print_driver"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Spinner
            android:id="@+id/print_driver_spinner"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <TextView
            android:id="@+id/printer_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorOffWhite"
            android:hint="@string/status_hint"
            android:lines="3"
            android:padding="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/layout_border"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_print_example"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Spinner
                    android:id="@+id/print_example_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:entries="@array/print_examples"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/preview_receipt"/>

                    <Button
                        android:id="@+id/button_print"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/print_receipt"/>

                    <Button
                        android:id="@+id/button_open_drawer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/print_open_drawer"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/codepages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/layout_border"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printing_with_code_page"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Spinner
                    android:id="@+id/print_codepage_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:entries="@array/codepage_values"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_codepage_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/preview_code_page_example"/>

                    <Button
                        android:id="@+id/button_codepage_print"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/print_code_page_example"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>